force-app/main/default/objects/Member_Section__c/Member_Section__c.object-meta.xml
<CustomObject>
    <label>Member / Section</label>
    <nameField>
        <displayFormat>CS-{00000000}</displayFormat>
        <label>Member / Section ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members / Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>