force-app/main/default/objects/Member_Section__c/fields/Club_Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Club_Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Club Opportunity Product</label>
    <referenceTo>Club_Opportunity_Product__c</referenceTo>
    <relationshipLabel>Members / Sections</relationshipLabel>
    <relationshipName>Members_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>