force-app/main/default/objects/Member_Section__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Member / Sections</relationshipLabel>
    <relationshipName>Member_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>