force-app/main/default/objects/Member_Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Club_Opportunity_Product__c</columns>
    <columns>Member__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Price__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>